--- a/3SemesterProjektt/appsettings.json
+++ b/3SemesterProjektt/appsettings.json
@@ -4,7 +4,8 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*"
